RESOLVED FIXED144854
gmail and google maps fail to load with eager compilation: Failed to insert inline cache for varargs call (specifically, CallForwardVarargs) because we thought the size would be 250 but it ended up being 262 prior to compaction.
https://bugs.webkit.org/show_bug.cgi?id=144854
Summary gmail and google maps fail to load with eager compilation: Failed to insert i...
Filip Pizlo
Reported 2015-05-10 21:11:25 PDT
Patch forthcoming.
Attachments
the patch (1.83 KB, patch)
2015-05-11 11:58 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2015-05-11 11:58:23 PDT
Created attachment 252879 [details] the patch
Filip Pizlo
Comment 2 2015-05-11 15:44:48 PDT
Note You need to log in before you can comment on or make changes to this bug.